[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlib"
crate-type = ["staticlib", "cdylib"]
repository = "https://github.com/OneeMe/rust-to-all"

[dependencies]
log = "0.4"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
bson = "2.1.0"
flexbuffers = "2.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[build-dependencies]
flapigen = "0.6.0-pre9"
